--- a/src/app/components/header/header.module.scss
+++ b/src/app/components/header/header.module.scss
@@ -1,11 +1,26 @@
 //TODO: mover color
-.header {
-  height: 60px;
-  width: 100%;
+
+.dashboard__header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
   background-color: #fff;
-  box-shadow: 0 2px 15px rgba(0, 0, 0, 0.2);
-  padding: 10px 30px;
+  z-index: 1000;
+  padding: 10px 20px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   display: flex;
   align-items: center;
   flex-direction: row-reverse;
+}
+
+.options {
+  position: absolute;
+  height: 400px;
+  width: 400px;
+  border-radius: 4px;
+  box-shadow: 0 2px 4px #00000014;
+  background-color: white;
+  right: 3px;
+  top: 50px;
 }
