--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -1,9 +1,9 @@
 .dashboard {
   margin: 0 auto;
   max-width: 1200px;
-  padding: 0 20px;
+  padding: 0 40px;
   height: 100vh;
-  margin-top: 40px;
+  margin-top: 90px;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -56,6 +56,6 @@
 
 @media (min-width: 1025px) {
   .dashboard {
-    padding: 0;
+    padding: 20px;
   }
 }
