--- a/src/app/components/chartItem/chartItem.module.scss
+++ b/src/app/components/chartItem/chartItem.module.scss
@@ -2,17 +2,21 @@
 
 .shopItem {
   background-color: $WhiteColor;
-  box-shadow: 0 2px 15px rgba(0, 0, 0, 0.2);
-  width: 246px;
-  border-radius: 25px;
   padding: 12px;
-  cursor: pointer;
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  justify-content: space-between;
+
+  &__rightSection {
+    display: flex;
+  }
 
   &__imgContainer {
-    height: 140px;
-    width: 100%;
+    height: 90px;
+    width: 90px;
     border-radius: 25px;
-    border: 2px solid $Grayscale3;
+    border: 2px solid $Grayscale2;
     padding: 8px;
     display: flex;
     justify-content: center;
@@ -21,9 +25,9 @@
   &__titleSection {
     display: flex;
     flex-direction: row;
+    flex-direction: column;
     justify-content: space-between;
-    margin-top: 12px;
-    color: $Grayscale5;
+    margin-left: 12px;
 
     &__title {
       font-size: "18px";
@@ -51,19 +55,46 @@
 
   &__price {
     font-size: 20px;
-    margin-top: 12px;
   }
 }
 
+.garbageIconContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
+.actionBtn {
+  height: 30px;
+  width: 30px;
+  font-size: 20px;
+  border-radius: 4px;
+  display: flex;
+  justify-content: center;
+  border: 1px solid $Grayscale2;
+  align-items: center;
+  cursor: pointer;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.counter {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  height: 30px;
+  width: 30px;
+}
+
 .img {
-  width: auto;
+  height: auto;
+  width: 60px;
   border-radius: 8px 0 0 8px;
-  border: 1px SOLID $WhiteColor;
   display: block;
   opacity: 0;
   transition: opacity 0.5s ease-in-out;
   border-radius: "25px";
-  height: 100px;
 }
 
 .imgLoaded {
