--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -3,29 +3,13 @@
   --foreground: #171717;
 }
 
-$primary-color: #3498db;
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
 html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-}
-
-body {
-  color: var(--foreground);
+  color: #3c3c3c;
   background: var(--background);
-  background-color: #eee;
   font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  height: 100vh;
 }
 
 * {
@@ -37,10 +21,4 @@ body {
 a {
   color: inherit;
   text-decoration: none;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
 }
