--- a/src/app/components/chartItem/chartItem.module.scss
+++ b/src/app/components/chartItem/chartItem.module.scss
@@ -19,7 +19,7 @@
     border: 2px solid $Grayscale2;
     padding: 8px;
     display: flex;
-    justify-content: center;
+    align-items: center;
   }
 
   &__titleSection {
@@ -88,13 +88,13 @@
 }
 
 .img {
-  height: auto;
+  height: fit-content;
+  max-height: 60px;
   width: 60px;
   border-radius: 8px 0 0 8px;
   display: block;
   opacity: 0;
   transition: opacity 0.5s ease-in-out;
-  border-radius: "25px";
 }
 
 .imgLoaded {
