--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -2,7 +2,6 @@
   margin: 0 auto;
   max-width: 1200px;
   padding: 0 40px;
-  height: 100vh;
   margin-top: 90px;
   display: flex;
   align-items: center;
@@ -44,8 +43,38 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: center;
     gap: 16px;
+  }
+}
+
+.emptyState {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  margin-top: 30px;
+
+  &__title {
+    font-size: 24px;
+    margin: 20px 0;
+    font-weight: bold;
+  }
+
+  &__subtitle {
+    font-size: 16px;
+    max-width: 350px;
+  }
+}
+
+@media (max-width: 900px) {
+  .dashboard {
+    padding: 20px;
+
+    &__productList {
+      justify-content: center;
+    }
   }
 }
 
